@@ -1,5 +1,10 @@
 2004-01-17  Andrew Cagney  <cagney@redhat.com>
 
+	* mdebugread.c: Update copyright.
+	(parse_symbol): Replace DEPRECATED_STREQ with strcmp.
+	(parse_type, parse_procedure): Ditto.
+	(parse_partial_symbols, psymtab_to_symtab_1): Ditto.
+
 	* cris-tdep.c (cris_store_struct_return): Put back accidently
 	deleted function.
 
